Make public signup JSON only
